--- a/src/components/energy-diagram.sass
+++ b/src/components/energy-diagram.sass
@@ -1,12 +1,13 @@
 .energy-diagram-container
   width: 150px
   height: 200px
-  background: #aaeebb
+  background-image: linear-gradient(#666666, black);
   display: inline-block
-  float: left
   margin: 10px
   padding: 10px
   position: relative
+  border: 8px solid silver
+  border-radius: 20px
 
   .energy-diagram-placeholder
     width: 100%
@@ -15,11 +16,12 @@
     background-size: contain
     background-position: 50% 50%
     background-repeat: no-repeat
+    filter: invert(1)
 
   .energy-bar-input
     width: 20px
     height: 180px
-    background-color: orange
+    background-color: lightgreen
     position: absolute
     left: 10px
     bottom: 0px
@@ -28,7 +30,8 @@
   .energy-bar-output
     width: 20px
     height: 80px
-    background-color: cyan
+    background-color: orange
     position: absolute
     right: 10px
     bottom: 0px
+    transition: 1s linear
