More placeholders, adjust styling

--- a/src/components/dance-simulation.sass
+++ b/src/components/dance-simulation.sass
@@ -3,3 +3,7 @@
     width: 400px
     height: 400px
     background: silver
+    &.carb
+      background-image: url("../assets/dance-carb.png")
+    &.protein
+      background-image: url("../assets/dance-protein.png")
