--- a/src/components/energy-diagram.sass
+++ b/src/components/energy-diagram.sass
@@ -1,3 +1,11 @@
+@keyframes pulse
+  from
+    filter: brightness(1) sepia(0) saturate(1000%) hue-rotate(0deg)
+  50%
+    filter: brightness(1) sepia(1) saturate(500%) hue-rotate(40deg)
+  to
+    filter: brightness(1) sepia(0) saturate(1000%) hue-rotate(0deg)
+
 .energy-diagram-container
   width: 150px
   height: 200px
@@ -12,12 +20,15 @@
   .energy-diagram-placeholder
     width: 100%
     height: 100%
-    background: url("../assets/silhouette.png")
+    background-image: url("../assets/silhouette_invert.png")
     background-size: contain
     background-position: 50% 50%
     background-repeat: no-repeat
-    filter: invert(1)
-
+    filter: brightness(1) sepia(0) saturate(1000%) hue-rotate(0deg)
+    &.running
+      animation-name: pulse
+      animation-duration: 1.0s
+      animation-iteration-count: 15
   .energy-bar-input
     width: 20px
     height: 180px
