--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -6,7 +6,7 @@
   left: 0
   right: 0
   bottom: 0
-  width: 100%
+  width: 800px
   max-width: 1600px
   height: 100%
   display: flex
@@ -34,7 +34,7 @@
 
     .main-content
       display: grid
-      grid-template-columns: 55% 45%
+      grid-template-columns: 50% 50%
       color: $main-content-color
       background-color: $color-white
       width: 100%
