--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -117,10 +117,14 @@
       &.protein
         background-image: url('../assets/protein-button.png')
 .energy-diagram-key
-  width: 300px
+  width: 180px
   height: 100px
   font-size: 0.9em
-  margin-left: 20px
+  margin-left: auto
+  margin-right: auto
+  border: 1px solid silver
+  border-radius: 4px
+  padding-top: 8px
 
   .key
     clear: both
@@ -128,7 +132,7 @@
     padding: 6px
     .key-text
       float: left
-      width: 200px
+      width: 140px
       margin-left: 10px
     .key-color
       float: left
