--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -91,9 +91,9 @@
   flex-direction: row
   align-items: center
   .run-simulation-button
-    margin: 10px 20px
+    margin: 10px 8px
     display: flex
-    width: 158px
+    width: 180px
     height: 65px
     border-radius: 8px
     border: 1px solid silver
@@ -104,11 +104,12 @@
     &:active
       box-shadow: inset 1px 1px 4px 0px rgba(0,0,0,0.5);
     .simulation-button-text
-      padding: 10px 0px 10px 10px
-      width: 100px
+      padding: 15px 0px 10px 5px
+      width: 120px
+      font-size: 0.9em
     .simulation-button-icon
-      margin: 10px 4px 10px 4px
-      width: 60px
+      margin: 10px 0px 10px 0px
+      width: 50px
       background-repeat: no-repeat
       background-size: contain
       background-position: center
