--- a/src/components/attribution.css
+++ b/src/components/attribution.css
@@ -1,8 +1,8 @@
 .attribution{
-  min-height: 600px;
+  min-height: 485px;
   bottom: 0px;
   top: 0;
-  left: 0px;
+  right: 60px;
   position: absolute;
 }
 
