--- a/src/components/dance-simulation.sass
+++ b/src/components/dance-simulation.sass
@@ -3,7 +3,11 @@
     width: 400px
     height: 400px
     background: silver
+    border: 1px solid silver
+    box-sizing: border-box
     &.carb
+      box-shadow: inset 0px 0px 0px 4px yellow
       background-image: url("../assets/dance-carb.png")
     &.protein
+      box-shadow: inset 0px 0px 0px 4px yellow
       background-image: url("../assets/dance-protein.png")
