--- a/src/components/dance-simulation.sass
+++ b/src/components/dance-simulation.sass
@@ -1,7 +1,7 @@
 .simulation-container
   .simulation-placeholder
     width: 400px
-    height: 400px
+    height: 315px
     background: silver
     border: 1px solid silver
     box-sizing: border-box
@@ -9,3 +9,6 @@
       background-image: url("../assets/dance-carb.png")
     &.protein
       background-image: url("../assets/dance-protein.png")
+
+    video
+      width: 100%
