Improved video preview quality, placeholder image, and css tweaks

--- a/src/components/dance-simulation.sass
+++ b/src/components/dance-simulation.sass
@@ -5,10 +5,7 @@
     background: silver
     border: 1px solid silver
     box-sizing: border-box
-    &.carb
-      background-image: url("../assets/dance-carb.png")
-    &.protein
-      background-image: url("../assets/dance-protein.png")
+    background-image: url("../assets/dance_placeholder.png")
 
     video
       width: 100%
