--- a/src/components/dance-simulation.sass
+++ b/src/components/dance-simulation.sass
@@ -1,5 +1,6 @@
 .simulation-container
   .simulation-placeholder
+    position: relative
     width: 400px
     height: 315px
     background: silver
@@ -9,3 +10,12 @@
 
     video
       width: 100%
+
+    .simulation-text
+      position: absolute
+      bottom: 5px
+      font-size: 0.9em
+      background: rgba(255,255,255,0.5)
+      width: 100%
+      text-align: center
+      z-index: 2
